Fix layout on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -83,13 +83,23 @@ h2 {
 	padding: 0 1rem;
 	border: 0.1rem outset var(--burnt-orange);
 	box-shadow: -5px 5px 5px 0 #00000022;
+	color: black;
+}
+
+.menu-item-quantity {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 }
 
 .menu-item-quantity-button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	border-radius: 100%;
-	width: 1.6rem;
-	height: 1.6rem;
 	margin: 1rem;
+	height: 1.3rem;
+	width: 1.3rem;
 	border: 0.1rem outset var(--burnt-orange);
 	box-shadow: -5px 5px 5px 0 #00000022;
 }
@@ -131,7 +141,11 @@ h2 {
 }
 
 .menu-footer-buttons {
-	margin: 1rem 0;
 	display: flex;
 	justify-content: center;
+	margin: auto 0;
+}
+
+.menu-footer-buttons button {
+	padding: 0.2rem 0.6rem;
 }
